2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, texmfmem.h, texmfmp.h, texmfmp-help.h,
	ac/web2c.ac: Add support for upTeX and e-upTeX.

2011-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mft.ch (parsearguments): Allow find_suffix() to return a
	const string.

2011-07-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: No need to test for PDFDoc::getPDFMajorVersion
	for poppler >= 0.12.

2011-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* enctex.ch: Fix an off-by-one bug initializing mubyte_cswrite.
	From Roderich Schupp <roderich.schupp@googlemail.com>,
	Debian Bug#633011, tex-k mail Fri, 8 Jul 2011 15:56:23.

2011-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Always use poppler for XeTeX instead of xpdf.

2011-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	SyncTeX infrastructure for pTeX and e-pTeX.
	* ac/web2c.ac: Enable SyncTeX for pTeX and e-pTeX.
	* texmfmp-help.h (*PTEXHELP): Document the -synctex option.

2011-06-23  Karl Berry  <karl@tug.org>

	* configure.ac (AC_C_CHAR_UNSIGNED): needed for test
	in web2c/w2c/config.h, else AIX ends up mis-tangling tex.web.
	tlbuild mail from vvv, 21 Jun 2011 23:57:53.

2011-06-06  Karl Berry  <karl@tug.org>

	* doc/web2c.texi: update MetaPost description, .mem's are
	no longer created or used.

2011-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../am/bin_links.am for $(bindir) links.

2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac (AC_CONFIG_FILES): Add otps/win32/Makefile.

2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h: Move generic_synctex_get_current_name() prototype
	from synctexdir/synctex-{,e,pdf,xe}tex.h to here.

2011-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* osx-strip: Removed.
	* configure.ac: Remove osx-strip.

2011-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* osx-strip: New shell script to strip Mac OS X binaries.
	* configure.ac: Use osx-strip for Mac OS X.
